ripristinate voci menu

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </li>
                     
                     <li>
-                        <a href="page/chi-siamo.html">Chi siamo???!!!!</a>
+                        <a href="page/chi-siamo.html">Chi siamo</a>
                     </li>
 
                     <li>
