--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="img/favicon.png"  />
+
+        <!-- jQuery CDN -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     </head>
     
     <body>
