--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/favicon.png" />
+    <!--link a js-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -73,6 +76,9 @@
 
                 <li>
                     <a href="page/contattaci.html">Contattaci</a>
+                </li>
+                <li>
+                    <a href="page/gallery.html">Gallery</a>
                 </li>
 
             </ul>
