--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/fonts.css">
         <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+        <link rel="stylesheet" type="text/css" href="css/lightgallery.min.css">
+
+
         <link rel="stylesheet" type="text/css" href="css/style.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
@@ -67,6 +70,31 @@
                 </ul>
 
             </nav>
+
+            <div id="show-data"></div>
+
+
+
+            <div id="lightgallery">
+                <a href="gallery/covid/1.jpg">
+                    <img src="gallery/covid/1.jpg" />
+                </a>
+                <a href="gallery/covid/2.jpg">
+                    <img src="gallery/covid/2.jpg" />
+                </a>
+                <a href="gallery/covid/3.jpg">
+                    <img src="gallery/covid/3.jpg" />
+                </a>
+                <a href="gallery/covid/4.jpg">
+                    <img src="gallery/covid/4.jpg" />
+                </a>
+                <a href="gallery/covid/5.jpg">
+                    <img src="gallery/covid/5.jpg" />
+                </a>
+                <a href="gallery/covid/6.jpg">
+                    <img src="gallery/covid/6.jpg" />
+                </a>
+            </div>
 
             
 
@@ -195,6 +223,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         
         <!-- Script -->
+        <script src="js/lightgallery-all.min.js"></script>
         <script src="js/script.js"></script>
 
     </body>
