--- a/parallax/parallax.html
+++ b/parallax/parallax.html
@@ -12,8 +12,8 @@
  	<link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
 
  	<!-- css -->
- 	<link rel="stylesheet" type="text/css" href="../parallax/css/normalize.css">
- 	<link rel="stylesheet" type="text/css" href="../parallax/css/style.css">
+ 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+ 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
  	
 
@@ -22,15 +22,14 @@
 </head>
 
 <body>
-<main container>
+
 <div id="scene" class="scene">
-			<div data-depth="0.60"><img src="../parallax/img/stars.png" width="100%"></div>
-			<div data-depth="0.40"><img src="../parallax/img/comets.png" width="100%"></div>
-			<div data-depth="0.20"><img class="planet" src="../parallax/img/planet.png" width="100%"></div>
-			<div data-depth="0.00"><img src="../parallax/img/man.png" width="100%"></div>
+			<div data-depth="0.60"><img src="img/stars.png" width="100%"></div>
+			<div data-depth="0.40"><img src="img/comets.png" width="100%"></div>
+			<div data-depth="0.20"><img class="planet" src="img/planet.png" width="100%"></div>
+			<div data-depth="0.00"><img src="img/man.png" width="100%"></div>
 			
 </div>
-</main>
 
 <iframe src="../parallax/sound/skyborn.mp3" allow="autoplay" style="display:none" id="iframeAudio">
 </iframe> 
@@ -42,9 +41,9 @@
 	<!-- parallax -->
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
  	<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
- 	<script src="../parallax/js/parallax.js"></script>
- 	<script src="../parallax/js/parallax_instance.js"></script>
- 	<script src="../parallax/js/audio.js"></script>
+ 	<script src="js/parallax.js"></script>
+ 	<script src="js/parallax_instance.js"></script>
+ 	<script src="js/audio.js"></script>
 
 </body>
 
